# aoc2022

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt
day3/core/: CmakeLists.txt  Reorganizer.h
day3/core/Source/: Reorganizer.cpp  main.cpp
day3/test/: CmakeLists.txt
day3/test/Source/: test.cpp
dayX/: CMakeLists.txt
dayX/core/: Reorganizer.h
dayX/core/Source/: Reorganizer.cpp  main.cpp
dayX/data/: input
dayX/test/Source/: test.cpp
